# chumsky-prac

./: .gitignore  Cargo.toml  Justfile  README.md  sample.nrs
examples/: nrs_parser.rs
interface/src/: lib.rs
interface/src/nodes/: expr.rs  func.rs  value.rs
interpreter/: Cargo.toml
interpreter/src/: error_reporter.rs  interpreter.rs  main.rs
lsp-client/: package.json
lsp-client/src/: extension.ts
lsp-server/: Cargo.toml
lsp-server/src/: analyzer.rs  globals.rs  language_server.rs  logger.rs  main.rs
lsp-server/src/analyzer/: diagnostics.rs  mod.rs  semantic_tokens.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  main.rs  tokens.rs
parser/src/nodes/: expr.rs  func.rs  mod.rs  value.rs
parser/src/parsers/: expr.rs  funcs.rs  mod.rs
src/: interpreter.rs  lexer.rs  main.rs  tokens.rs
src/nodes/: binaryop.rs  expr.rs  func.rs  mod.rs  value.rs
src/parsers/: expr.rs  funcs.rs  mod.rs
test_codes/: fib.ipu  ms1.ipu
vsc-ext/: package.json  tsconfig.json
vsc-ext/src/: extension.ts
