[package]
name = "lsp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tower-lsp = "0.14.1"
tokio = {version = "1.15.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
log = "0.4.14"
simplelog = "0.11.2"
chrono = "0.4.19"
parser = { path = "../parser" }
once_cell = "1.9.0"
itertools = "0.10.3"
chumsky = "0.8.0"